# CodexLeaks

./: .gitignore  Prompt.py  README.md  config.py  main.py  utils.py
Blind_MI/: main.py  utils.py
annotator/: Cargo.toml  README.md  Rocket.toml
annotator/src/: lib.rs  main.rs
annotator/templates/: base.html.tera  index.html.tera  item.html.tera
resources/: templates.py
